@@ -1,16 +1,23 @@
 package com.robotech.robotech_backend.controller;
 
-import com.robotech.robotech_backend.model.entity.*;
-import com.robotech.robotech_backend.model.enums.*;
+import com.robotech.robotech_backend.model.entity.Club;
+import com.robotech.robotech_backend.model.entity.Competidor;
+import com.robotech.robotech_backend.model.entity.Usuario;
+import com.robotech.robotech_backend.model.enums.EstadoUsuario;
+import com.robotech.robotech_backend.model.enums.EstadoValidacion;
 import com.robotech.robotech_backend.repository.CompetidorRepository;
 import com.robotech.robotech_backend.repository.UsuarioRepository;
 import com.robotech.robotech_backend.service.ClubService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.Authentication; // ✅ Importante para mi-club
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/clubes")
@@ -21,7 +28,6 @@ public class ClubController {
     private final UsuarioRepository usuarioRepository;
     private final CompetidorRepository competidorRepository;
 
-    // ✅ Constructor único para inyectar todo (Mejor práctica que @Autowired suelto)
     public ClubController(ClubService clubService,
                           UsuarioRepository usuarioRepository,
                           CompetidorRepository competidorRepository) {
@@ -50,34 +56,32 @@ public class ClubController {
         clubService.eliminar(id);
     }
 
-    // =============================================================
-    // ✨ NUEVOS ENDPOINTS PARA EL DASHBOARD
-    // =============================================================
-
-    /**
-     * ✅ Obtiene el club asociado al usuario logueado
-     */
     @GetMapping("/mi-club")
     @PreAuthorize("hasAuthority('CLUB')")
     public ResponseEntity<Club> obtenerMiClub(Authentication auth) {
         return ResponseEntity.ok(clubService.obtenerPorUsuario(auth));
     }
 
-    /**
-     * ✅ Lógica de conteo en Backend: Solo devuelve los números (KPIs)
-     */
+    @PostMapping("/mi-club/imagen")
+    @PreAuthorize("hasAuthority('CLUB')")
+    public ResponseEntity<Map<String, String>> subirImagenMiClub(
+            Authentication auth,
+            @RequestParam(value = "file", required = false) MultipartFile file,
+            @RequestParam(value = "imagen", required = false) MultipartFile imagen,
+            @RequestParam(value = "foto", required = false) MultipartFile foto
+    ) {
+        MultipartFile archivo = file != null ? file : (imagen != null ? imagen : foto);
+        String imagenUrl = clubService.subirImagenClub(auth, archivo);
+        return ResponseEntity.ok(Map.of("imagenUrl", imagenUrl));
+    }
+
     @GetMapping("/{idClub}/stats")
     @PreAuthorize("hasAuthority('CLUB')")
     public ResponseEntity<Map<String, Long>> getStats(@PathVariable String idClub) {
-        // Esta lógica llama al método que creamos en el ClubService
         return ResponseEntity.ok(clubService.obtenerEstadisticasDashboard(idClub));
     }
 
-    // =============================================================
-    // ⚙️ GESTIÓN DE COMPETIDORES
-    // =============================================================
-
-    @PreAuthorize("hasAuthority('CLUB')") // Cambiado a Authority por consistencia
+    @PreAuthorize("hasAuthority('CLUB')")
     @PutMapping("/aprobar/{idCompetidor}")
     public ResponseEntity<?> aprobar(@PathVariable String idCompetidor) {
         Competidor c = competidorRepository.findById(idCompetidor)
@@ -90,7 +94,6 @@ public class ClubController {
         u.setEstado(EstadoUsuario.ACTIVO);
         usuarioRepository.save(u);
 
-        return ResponseEntity.ok(Map.of("message", "Competidor aprobado y usuario activado"));
+        return ResponseEntity.ok(Collections.singletonMap("message", "Competidor aprobado y usuario activado"));
     }
 }
-
